plugins {
	id 'application'
	id 'eclipse'
}

group = 'org.virginiaso.photogator'
version = '1.0.0'
sourceCompatibility = '17'

tasks.withType(JavaCompile) {
	options.compilerArgs += '-Xlint:all'
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.scream3r:jssc:2.8.0'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'
}

application {
	mainClass = 'org.virginiaso.photogator.Photogator'
}

jar {
	manifest {
		attributes(
			'Main-Class': application.mainClass
		)
	}
	from {
		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
	}
}

test {
	useJUnitPlatform()
}
